Bug 37691: Improve visibility of password expiration reset link
This patch moves the password expiration reset link into the error box
so that it is more prominent.

To test, apply the patch and rebuild the staff interface
CSS:
https://wiki.koha-community.org/wiki/Working_with_SCSS_in_the_OPAC_and_staff_interface

Try to log in to the staff interface as a user whose password has
expired. You will probably have to use SQL to update a patron record
directly, e.g.

UPDATE borrowers SET password_expiration_date = '2022-01-01' WHERE borrowernumber = X;

When you submit your login details the page should reload with an error
message: "Error: Your password has expired." Within the red dialog you
should see the "You must reset your password" link.

Sponsored-by: Athens County Public Libraries

--- a/koha-tmpl/intranet-tmpl/prog/css/login.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/login.css
@@ -71,11 +71,13 @@ label {
 #login #login_error a:link,
 #login #login_error a:visited {
 	color : #FFC;
+    text-decoration: underline;
 }
 
 #login #login_error a:hover,
 #login #login_error a:active {
 	color : #FCFC4D;
+    text-decoration: underline;
 }
 
 #login h1 {
